2013-09-17  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* OutlineTreeView.h:
	* OutlineUserData.h:
	* OutlineTreeView.cpp: 

2013-09-17  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* OutlineSelection.cpp: 

2013-09-17  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp: 

2013-09-17  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* OutlineTreeView.cpp:
	* OutlineSelection.cpp: 

2013-09-16  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* X3DBrowserWindow.cpp:
	* HistoryEditor.h:
	* OutlineTreeView.h:
	* HistoryEditor.cpp:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DBrowserWindowInterface.cpp: 

2013-09-16  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.ui:
	* BrowserWindow.cpp:
	* OutlineTreeView.ui:
	* OutlineTreeView.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp:
	* X3DBrowserWindowInterface.h:
	* X3DOutlineTreeViewInterface.h:
	* X3DBrowserWindowInterface.cpp:
	* X3DOutlineTreeViewInterface.cpp: 

2013-09-15  Holger Seelig  <holger.seelig@yahoo.de>

	* run.pl:
	* Makefile.am:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* ViewpointList.ui:
	* BrowserWindow.ui:
	* OutlineTree.h:
	* ViewpointMenuItem.h:
	* ViewpointList.h:
	* OutlineEditor.h:
	* ViewpointMenuItem.cpp:
	* ViewpointList.cpp:
	* OutlineTreeData.h:
	* OutlineTreeView.h:
	* OutlineTreeModel.h:
	* OutlineSelection.h:
	* OutlineTreeView.cpp:
	* OutlineTreeModel.cpp:
	* OutlineSelection.cpp:
	* X3DViewpointListInterface.h:
	* X3DBrowserWindowInterface.h:
	* X3DViewpointListInterface.cpp:
	* X3DBrowserWindowInterface.cpp: 

2013-09-13  Holger Seelig  <holger.seelig@yahoo.de>

	* info.wrl: 

2013-09-13  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* BrowserWindow.ui:
	* info.wrl:
	* info.png:
	* logo.wrl:
	* info.svg:
	* X3DConsoleInterface.h:
	* X3DViewpointListInterface.h: