@@ -222,7 +222,7 @@ void
 OutlineTreeView::set_rootNodes ()
 {
 	//__LOG__ << std::endl;
-
+	
 	for (const auto & column : get_columns ())
 		column -> set_visible (false);
 
@@ -237,6 +237,8 @@ OutlineTreeView::set_rootNodes ()
 
 	set_model (get_model ());
 
+	++ expandLevel;
+
 	for (auto & iter : get_model () -> children ())
 	{
 		// Expand row again if it was previously expanded.
@@ -244,6 +246,8 @@ OutlineTreeView::set_rootNodes ()
 		if (get_expanded (iter))
 			expand_row (get_model () -> get_path (iter), false);
 	}
+	
+	--expandLevel;
 
 	for (const auto & column : get_columns ())
 		column -> set_visible (true);
@@ -545,7 +549,7 @@ void
 OutlineTreeView::update_field (const Gtk::TreeModel::Path & path)
 {
 	//__LOG__ << std::endl;
-
+	
 	Gtk::TreeModel::iterator iter         = get_model () -> get_iter (path);
 	bool                     all_expanded = get_all_expanded (iter);
 
@@ -556,8 +560,12 @@ OutlineTreeView::update_field (const Gtk::TreeModel::Path & path)
 
 	get_model () -> row_has_child_toggled (path, iter);
 
+	++ expandLevel;
+
 	set_all_expanded (iter, all_expanded);
 	expand_row (path, false);
+
+	-- expandLevel;
 
 	for (const auto & column : get_columns ())
 		column -> set_visible (true);
@@ -573,8 +581,12 @@ OutlineTreeView::toggle_field (const Gtk::TreeModel::Path & path)
 	Gtk::TreeView::collapse_row (path);
 	get_model () -> row_has_child_toggled (path, iter);
 
+	++ expandLevel;
+
 	set_all_expanded (iter, true);
 	expand_row (path, false);
+
+	-- expandLevel;
 }
 
 void
