@@ -1,5 +1,9 @@
 2013-09-17  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* OutlineTreeView.cpp: 
+
+2013-09-17  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* BrowserWindow.cpp:
 	* OutlineTreeView.h:
 	* OutlineUserData.h:
